<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical"
    tools:context=".views.SelelccionarPlatilloEncargoActivity">
    <TextView
        android:id="@+id/txtGasHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textSize="20dp"
        android:text="@string/titulo_encargo_platillo"
        android:textAlignment="center"
        />
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        tools:ignore="MissingConstraints">
        <Button
            android:id="@+id/selectPlatillo_btn_alimentos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alimentos"
            android:layout_margin="10dp"
            />
        <Button
            android:id="@+id/selectPlatillo_btn_bebidas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/bebidas"
            />
    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/selectPlatillo_recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/item_encargo_platillo"
        />
</androidx.appcompat.widget.LinearLayoutCompat>